# TaiyouUI

./: CMakeLists.txt  README.md
TaiyouUI/: Container.cpp  Container.h  Control.cpp  Control.h  InputEvent.h  Layer.cpp  Layer.h  UIRoot.cpp  UIRoot.h  UIRootContext.h
TaiyouUI/Animation/: ColorInterpolator.cpp  ColorInterpolator.h  Interpolator.cpp  Interpolator.h  InterpolatorEasingFunction.h
TaiyouUI/Controls/: Button.cpp  Button.h
TaiyouUI/Render/: IRenderPrimitive.h  Transform.h
TaiyouUI/Turk/: FontDescriptor.cpp  FontDescriptor.h  FontDescriptorHasher.h  Turk.cpp  Turk.h
